<resources>
    <string name="app_name">VpCampus</string>

    <!--  Authentication activity text (Common)   -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>

    <!--  Login activity   -->
    <string name="login_description_text">Glad to have you back please login to get started</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Do not have account? Create new account</string>

    <!-- Register activity   -->
    <string name="already_have_account">Already have account? Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="register_description_text">Dont have account yet please register to get started</string>

    <!-- Verification activity   -->
    <string name="verification_dialog_cancel">Cancel</string>
    <string name="verification_dialog_Proceed">Proceed</string>
    <string name="verification_dialog_title">Cancel Verification?</string>
    <string name="verification_dialog_description">Account verification is required to use this application</string>
    <string name="verification">Verification</string>
    <string name="resend_otp">Resend OTP In</string>
    <string name="resend_otp_text">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="one_time_password">One Time Password</string>
    <string name="verification_description_text">One time password has been sent to you email address please verify</string>

    <!-- Activation activity   -->
    <string name="account_activation">Account activation</string>
    <string name="account_activation_description">You are just on step away to activate you account</string>
    <string name="year_of_study">Year of study</string>
    <string name="department">Department</string>
    <string name="activate">Activate</string>
    <string name="account_activation_dialog_title">Cancel activation?</string>
    <string name="account_activation_dialog_description">You are just one step away from activating
        you account. Account activation is necessary for displaying the user information</string>
    <string name="account_activation_dialog_cancel">Cancel</string>
    <string name="account_activation_dialog_proceed">Proceed</string>
    <string name="choose_year_of_study">Choose year of study</string>
    <string name="choose_department">Choose department</string>
    <string name="choose">Choose</string>

    <!-- Profile activity   -->
    <string name="profile">Profile</string>

    <!--  deparments list   -->
    <string name="comp">Computer Engineering</string>
    <string name="it">Information Technology</string>
    <string name="entc">Electronics And Telecommunication</string>
    <string name="mech">Mechanical Engineering</string>
    <string name="civil">Civil Engineering</string>
    <string name="aids">Artificial Intelligence And Data Science</string>
    <string name="elect">Electrical Engineering</string>

    <!--  year of studies  -->
    <string name="fe">First Year</string>
    <string name="se">Second Year</string>
    <string name="te">Third Year</string>
    <string name="be">Fourth Year</string>
    <string name="bio">About Yourself</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_notification">CreateNotificationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="search">Search</string>
    <string name="more">more</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="update">Update</string>

</resources>