<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.auth.LoginActivity"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/login_toolbarr"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="Login"
            app:navigationIcon="@drawable/ic_arrow_back"
            android:background="@color/white"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/screenPadding"
        android:layout_gravity="center"
        android:gravity="center"
        >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_login_image"
        android:layout_gravity="center"
        android:id="@+id/iv_login_image"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:layout_marginTop="@dimen/welcome_text_martin_top"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/welcome_text_size"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_description_text"
        android:layout_marginTop="@dimen/login_description_text_margin_top"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="@dimen/login_description_text_size"
        android:textColor="@color/textLight"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/login_form_margin_top"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/colorPrimary"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_email_address"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tf_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintTextColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/text_field_margin_top"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_password"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:gravity="end"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/forgot_password_margin_top"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tv_forgot_password"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="@dimen/textSize"
            android:padding="@dimen/btnPadding"
            android:layout_marginTop="@dimen/text_field_margin_top"
            android:id="@+id/btn_login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:gravity="end|center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/text_field_margin_top"
            android:textColor="@color/textLight"
            android:id="@+id/tv_create_new_account"
            />

    </LinearLayout>

    </LinearLayout>

</LinearLayout>