<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.user.EditProfileAcitivty"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:liftOnScroll="true"
                    >

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/fr_profile_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:title="Edit profile"
                        android:background="@color/white"
                        app:navigationIcon="@drawable/ic_arrow_back"
                        />

                </com.google.android.material.appbar.AppBarLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:padding="@dimen/screenPadding"
                    android:gravity="center"
                    >

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/profile_image_width_height"
                        android:layout_height="@dimen/profile_image_width_height"
                        android:src="@drawable/ic_user_avatar"
                        android:id="@+id/iv_ed_profile_user_image"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:layout_marginTop="@dimen/profile_input_box_margin_top"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_profile_name"
                            android:text="Ritesh Khore"
                            android:textColor="@color/textPrimary"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:layout_marginTop="@dimen/profile_input_box_margin_top"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_profile_email"
                            android:text="riteshkhore@gmail.com"
                            android:textColor="@color/textPrimary"
                            />

                    </com.google.android.material.textfield.TextInputLayout>




                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_department"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/choose_department"
                        android:layout_marginTop="@dimen/profile_input_box_margin_top"
                        >

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:id="@+id/actv_edit_department"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_year_of_study"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/choose_year_of_study"
                        android:layout_marginTop="@dimen/profile_input_box_margin_top"
                        >

                        <AutoCompleteTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:id="@+id/actv_edit_year_of_study"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tv_ed_profile_bio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bio"
                        android:layout_marginTop="@dimen/profile_input_box_margin_top"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/et_ed_profile_bio"
                            android:text="Bio"
                            android:textColor="@color/textPrimary"
                            android:inputType="textMultiLine"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/update"
                        android:textAllCaps="false"
                        android:textSize="@dimen/textSize"
                        android:padding="@dimen/btnPadding"
                        android:layout_marginTop="@dimen/profile_input_box_margin_top"
                        android:id="@+id/btn_update"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="bottom|end"
        android:gravity="bottom|end"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="Edit"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_edit_icon"
            />
    </LinearLayout>


</LinearLayout>